--- a/Cook/View/Choice.xaml
+++ b/Cook/View/Choice.xaml
@@ -25,7 +25,7 @@
                 <Button x:Name="Btn_Register" Template="{StaticResource BtnRond}" Content="Register" Width="150" Height="40" FontFamily="helvetica" FontSize="20"  Margin="10" Opacity="0.8" Click="Register_Click"/>
                 
             </WrapPanel>
-            <Button x:Name="Btn_Test" Template="{StaticResource BtnRond}" VerticalAlignment="Bottom" Content="Mode Test" Width="150" Height="40" FontFamily="helvetica" FontSize="20"  Margin="40" Opacity="0.8" Click="Btn_Test_Click"/>
+            <Button x:Name="Btn_Test" Template="{StaticResource BtnRond}" VerticalAlignment="Bottom" Content="Demo" Width="150" Height="40" FontFamily="helvetica" FontSize="20"  Margin="40" Opacity="0.8" Click="Btn_Test_Click"/>
 
         </Grid>
     </Border>
