--- a/Cook/View/Login.xaml
+++ b/Cook/View/Login.xaml
@@ -12,7 +12,7 @@
     <Border  Background="Transparent" CornerRadius="20">
         <Grid>
 
-            <TextBlock Grid.ColumnSpan="2" HorizontalAlignment="Center" Text="Login" FontFamily="helvetica" FontSize="50" Foreground="white" Margin="0 50 0 0" />
+            <TextBlock Grid.ColumnSpan="2" HorizontalAlignment="Center" Text="Login" FontFamily="helvetica" FontSize="50"  VerticalAlignment="Top" Foreground="white" Margin="0 50 0 0" />
 
 
             <StackPanel Orientation="Vertical" Width="150" VerticalAlignment="Center" Margin="0 0 0 50">
