--- a/Cook/View/DemoPage.xaml
+++ b/Cook/View/DemoPage.xaml
@@ -6,8 +6,17 @@
              xmlns:local="clr-namespace:Cook.View"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="800"
+             Loaded="UserControl_Loaded">
     <Grid>
+
+        <Grid Margin="100 120 100 60">
+            <ScrollViewer  VerticalScrollBarVisibility="Hidden" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="White" FontFamily="helvetica" FontSize="20">
+                <StackPanel x:Name="viewer"/>
+
+            </ScrollViewer>
+            
+        </Grid>
 
         <TextBlock Grid.ColumnSpan="2" HorizontalAlignment="Center" Text="Demo" FontFamily="helvetica" FontSize="50"  VerticalAlignment="Top" Foreground="white" Margin="0 50 0 0" />
 
@@ -15,8 +24,12 @@
             <materialDesign:PackIcon Kind="ArrowBack" Width="50" Height="50" Foreground="#bfaae6" />
         </Button>
 
-        <Button x:Name="next" HorizontalAlignment="Center" Width="50" Height="50" VerticalAlignment="Bottom" Margin="30"  Template="{DynamicResource BtnNav}" Click="next_Click">
+        <Button x:Name="next" HorizontalAlignment="Right" Width="50" Height="50" VerticalAlignment="Bottom" Margin="30"  Template="{DynamicResource BtnNav}" Click="next_Click">
             <materialDesign:PackIcon Kind="ArrowRight" Width="50" Height="50" Foreground="#bfaae6" />
+        </Button>
+
+        <Button x:Name="previous" HorizontalAlignment="Left" Width="50" Height="50" VerticalAlignment="Bottom" Margin="30"  Template="{DynamicResource BtnNav}" Click="previous_Click">
+            <materialDesign:PackIcon Kind="ArrowLeft" Width="50" Height="50" Foreground="#bfaae6" />
         </Button>
 
     </Grid>
