--- a/Cook/View/Profil.xaml
+++ b/Cook/View/Profil.xaml
@@ -21,19 +21,19 @@
         <StackPanel  Orientation="Vertical" Width="150" VerticalAlignment="Center"  Grid.Column="0"  >
 
             <StackPanel Margin="0 50 0 0" >
-                <TextBox x:Name="NomTxtBx_Profil" Margin="2" Text="Nom"/>
+                <TextBox  Style = "{StaticResource placeHolder}" x:Name="NomTxtBx_Profil" Margin="2" Tag="Nom"/>
                 <Border Background="#bfaae6" Width="{Binding Path=ActualWidth}" Height="2" />
 
             </StackPanel>
 
 
             <StackPanel Margin="0 50 0 0" >
-                <TextBox x:Name="PrenomTxtBx_Profil" Margin="2" Text="Prenom"/>
+                <TextBox Style = "{StaticResource placeHolder}" x:Name="PrenomTxtBx_Profil" Margin="2" Tag="Prenom"/>
                 <Border Background="#bfaae6" Width="{Binding Path=ActualWidth}" Height="2" />
             </StackPanel>
 
             <StackPanel Margin="0 50 0 0" >
-                <TextBox x:Name="NumTelTxtBx_Profil" Margin="2" Text="Téléphone"/>
+                <TextBox Style = "{StaticResource placeHolder}" x:Name="NumTelTxtBx_Profil" Margin="2" Tag="Téléphone"/>
                 <Border Background="#bfaae6" Width="{Binding Path=ActualWidth}" Height="2"/>
             </StackPanel>
         </StackPanel>
@@ -42,17 +42,19 @@
         <StackPanel Orientation="Vertical" Width="150" VerticalAlignment="Center"  Grid.Column="1">
 
             <StackPanel Margin="0 50 0 0" >
-                <TextBox x:Name="AdrMailTxtBx_Profil" Margin="2" Text="Adresse Mail"/>
+                <TextBox Style = "{StaticResource placeHolder}" x:Name="AdrMailTxtBx_Profil" Margin="2" Tag="Adresse Mail"/>
+                <Border Background="#bfaae6" Width="{Binding Path=ActualWidth}" Height="2" />
+            </StackPanel>
+            
+          
+
+            <StackPanel Margin="0 50 0 0" >
+                <PasswordBox  Tag="Password" x:Name="PswrdTxtBx_Profil" Margin="2" Password="password" />
                 <Border Background="#bfaae6" Width="{Binding Path=ActualWidth}" Height="2" />
             </StackPanel>
 
             <StackPanel Margin="0 50 0 0" >
-                <PasswordBox x:Name="PswrdTxtBx_Profil" Margin="2" Password="password" />
-                <Border Background="#bfaae6" Width="{Binding Path=ActualWidth}" Height="2" />
-            </StackPanel>
-
-            <StackPanel Margin="0 50 0 0" >
-                <TextBox x:Name="IdTxtBx_Profil" Margin="2" Text="Identifiant"/>
+                <TextBox Style = "{StaticResource placeHolder}" x:Name="IdTxtBx_Profil" Margin="2" Tag="Identifiant"/>
                 <Border Background="#bfaae6" Width="{Binding Path=ActualWidth}" Height="2" />
             </StackPanel>
         </StackPanel>
@@ -76,7 +78,7 @@
             </StackPanel>
 
             <StackPanel Margin="0 40 0 0">
-                <TextBox  x:Name="AdrTxtBx_Profil" Margin="5" Text="Adresse"/>
+                <TextBox Style = "{StaticResource placeHolder}"  x:Name="AdrTxtBx_Profil" Margin="5" Tag="Adresse"/>
                 <Border Background="#bfaae6" Width="{Binding Path=ActualWidth}" Height="2"/>
             </StackPanel>
 
