--- a/Cook/App.xaml
+++ b/Cook/App.xaml
@@ -118,30 +118,61 @@
             </ControlTemplate>
 
 
-
-
-            <Style TargetType="{x:Type TextBox}">
+            <Style x:Key="placeHolder" TargetType="{x:Type TextBox}" BasedOn="{StaticResource {x:Type TextBox}}">
+                
                 <Setter Property="Foreground" Value="White"/>
                 <Setter Property="FontFamily" Value="Helvetica"/>
                 <Setter Property="FontSize" Value="15"/>
-                <Setter Property="Opacity" Value="0.7"/>
                 <Setter Property="BorderThickness" Value="0"/>
                 <Setter Property="Background" Value="Transparent"/>
                 <Setter Property="Width" Value="{Binding  Path=ActualWidth}"/>
 
-                <Style.Triggers>
-                    
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="{x:Type TextBox}">
+                            <Grid>
+                                <TextBox Text="{Binding Path=Text,
+                                                RelativeSource={RelativeSource TemplatedParent}, 
+                                                Mode=TwoWay,
+                                                UpdateSourceTrigger=PropertyChanged}"
+                                 x:Name="textSource" 
+                                 Background="Transparent" 
+                                         Foreground="White"
+                                 Panel.ZIndex="2" BorderThickness="0" />
+                                <TextBox Text="{TemplateBinding Tag}" Background="Transparent" Panel.ZIndex="1" BorderThickness="0" >
+                                    <TextBox.Style>
+                                        <Style TargetType="{x:Type TextBox}">
+                                            <Setter Property="Foreground" Value="Transparent"/>
+                                            <Style.Triggers>
+                                                <DataTrigger Binding="{Binding Path=Text, Source={x:Reference textSource}}" Value="">
+                                                    <Setter Property="Foreground" Value="White"/>
+                                                    <Setter Property="HorizontalContentAlignment" Value="Left"/>
+                                                    <Setter Property="VerticalContentAlignment" Value="Center"/>
+                                                </DataTrigger>
 
+                                                
+                                                
+                                            </Style.Triggers>
+                                        </Style>
+                                    </TextBox.Style>
+                                </TextBox>
+                            </Grid>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+
+                <Style.Triggers>
                     <Trigger Property="IsMouseOver" Value="True">
-                        <Setter Property="Opacity" Value="1"/>
+                        <Setter Property="Opacity" Value="0.8"/>
                     </Trigger>
                 </Style.Triggers>
-
-
-
-
+                
             </Style>
+
+
             
+
+
             <Style TargetType="{x:Type PasswordBox}">
                 <Setter Property="Foreground" Value="White"/>
                 <Setter Property="FontFamily" Value="Helvetica"/>
