--- a/Cook/View/ModelRecette.xaml
+++ b/Cook/View/ModelRecette.xaml
@@ -19,7 +19,7 @@
                     <ColumnDefinition Width="2*"/>
                 </Grid.ColumnDefinitions>
                 <StackPanel Margin="10 0 10 0">
-                    <TextBlock x:Name="Title_Rct" FontSize="20" FontFamily="Helvetica" Foreground="Black" Margin="10 10 0 0"/>
+                    <TextBlock x:Name="Title_Rct" FontWeight="SemiBold" Foreground="#bfaae6" FontSize="20" FontFamily="Helvetica" Margin="10 10 0 0"/>
                     <TextBlock x:Name="Description_Rct" Margin="0 20 0 0" TextWrapping="Wrap" Height="90" TextAlignment="Justify"/>
 
                     <Grid HorizontalAlignment="Center" Margin="0 10 0 0" Width="280">
