--- a/Cook/View/DetailRecette.xaml
+++ b/Cook/View/DetailRecette.xaml
@@ -47,21 +47,27 @@
                 </Grid.RowDefinitions>
                 <TextBlock x:Name="Titre" Margin="5"  FontSize="20" VerticalAlignment="Center" Foreground="#bfaae6" FontFamily="Helvetica" HorizontalAlignment="Center" />
                 <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Hidden" Margin="10" VerticalAlignment="Center" HorizontalAlignment="Center" >
-                    
+
                     <TextBlock x:Name="Description"  TextWrapping="Wrap"  FontSize="15" FontFamily="Helvetica" />
                 </ScrollViewer>
                 
             </Grid>
-            <Grid Grid.Row="1">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="1*"/>
-                    <ColumnDefinition Width="1*"/>
-                </Grid.ColumnDefinitions>
-                <Border Height="1" Opacity="0.8" BorderBrush="#bfaae6" BorderThickness="1" Margin="10 0 10 0" Grid.ColumnSpan="2" VerticalAlignment="Top"/>
-                <StackPanel x:Name="Prdt" Margin="0 0 0 20"  VerticalAlignment="Bottom"  HorizontalAlignment="Center" />
-                <StackPanel x:Name="Qt_Prdt" Margin="0 0 0 20"  VerticalAlignment="Bottom"  HorizontalAlignment="Left" Grid.Column="1" />
-                
-            </Grid>
+
+            <ScrollViewer VerticalScrollBarVisibility="Hidden" Grid.Row="1">
+
+                <Grid >
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="1*"/>
+                        <ColumnDefinition Width="1*"/>
+                    </Grid.ColumnDefinitions>
+                    <Border Height="1" Opacity="0.8" BorderBrush="#bfaae6" BorderThickness="1" Margin="10 0 10 0" Grid.ColumnSpan="2" VerticalAlignment="Top"/>
+                    <StackPanel x:Name="Prdt" Margin="0 0 0 20"  VerticalAlignment="Bottom"  HorizontalAlignment="Center" />
+                    <StackPanel x:Name="Qt_Prdt" Margin="0 0 0 20"  VerticalAlignment="Bottom"  HorizontalAlignment="Left" Grid.Column="1" />
+
+                </Grid>
+
+            </ScrollViewer>
+            
             
             <Button Grid.Row="1" x:Name="del" Grid.Column="1" Margin="0 0 10 10"  HorizontalAlignment="Right" Width="50" Height="50" VerticalAlignment="Bottom" Click="del_Click"  Template="{DynamicResource BtnNav}">
                 <materialDesign:PackIcon Kind="Bin" Width="40" Height="40" Foreground="#FFBFAAE6"/>
